[gd_scene load_steps=2 format=3 uid="uid://ebaiksgghdwb"]

[ext_resource type="Script" uid="uid://ctsvy7ul7f7ep" path="res://addons/sv_mod_loader/interface/new_mod_list_window/new_mod_list_window.gd" id="1_oftdn"]

[node name="NewModListWindow" type="Window" node_paths=PackedStringArray("confirm_button", "name_line_edit", "copy_check_box")]
title = "New Mod List"
initial_position = 2
size = Vector2i(379, 169)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
popup_window = true
script = ExtResource("1_oftdn")
confirm_button = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ConfirmButton")
name_line_edit = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/NameLineEdit")
copy_check_box = NodePath("PanelContainer/MarginContainer/VBoxContainer/CopyCheckBox")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name: "

[node name="NameLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CopyCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Copy of current mod list"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Create"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/NameLineEdit" to="." method="_on_name_line_edit_text_changed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/CopyCheckBox" to="." method="_on_copy_check_box_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ConfirmButton" to="." method="_on_confirm_button_pressed"]
